<resources>
    <string name="app_name">KrygaAndroid</string>
    <string name="text_name">Имя:</string>
    <string name="text_age">Возраст:</string>
    <string name="text_specialisation">Специализация:</string>
    <string name="text_photo">Фото</string>
    <string name="text_project">Проект</string>
    <string name="text_achievements">Достижения</string>
    <string name="img1">img1</string>
    <string name="todo">TODO</string>
    <string name="img2">img2</string>
    <string name="img3">img3</string>
    <string name="img4">img4</string>
    <string name="img5">img5</string>
    <string name="img6">img6</string>
    <string name="text_name_pg1">Имя: Георгий (Жорик)</string>
    <string name="text_age_pg1">Возраст: 27 лет</string>
    <string name="text_specialisation_pg1">Специализация: Лесник</string>
</resources>